@@ -15,9 +15,9 @@ enum
 class FramebufferLayoutImpl : public FramebufferLayoutBase
 {
 public:
-    short_vector<IFramebufferLayout::TargetLayout> m_renderTargets;
+    short_vector<TargetLayoutDesc> m_renderTargets;
     bool m_hasDepthStencil = false;
-    IFramebufferLayout::TargetLayout m_depthStencil;
+    TargetLayoutDesc m_depthStencil;
 };
 
 class FramebufferImpl : public FramebufferBase
