@@ -152,9 +152,9 @@ struct BaseRayTracingTest
 
         createResultTexture();
 
-        IFramebufferLayout::TargetLayout renderTargetLayout = {Format::R8G8B8A8_UNORM, 1};
-        IFramebufferLayout::TargetLayout depthLayout = {Format::D32_FLOAT, 1};
-        IFramebufferLayout::Desc framebufferLayoutDesc;
+        TargetLayoutDesc renderTargetLayout = {Format::R8G8B8A8_UNORM, 1};
+        TargetLayoutDesc depthLayout = {Format::D32_FLOAT, 1};
+        FramebufferLayoutDesc framebufferLayoutDesc;
         framebufferLayoutDesc.renderTargetCount = 1;
         framebufferLayoutDesc.renderTargets = &renderTargetLayout;
         framebufferLayoutDesc.depthStencil = &depthLayout;
