@@ -135,11 +135,11 @@ struct BaseResolveResourceTest
             slangReflection
         ));
 
-        IFramebufferLayout::TargetLayout targetLayout;
+        TargetLayoutDesc targetLayout;
         targetLayout.format = format;
         targetLayout.sampleCount = 4;
 
-        IFramebufferLayout::Desc framebufferLayoutDesc;
+        FramebufferLayoutDesc framebufferLayoutDesc;
         framebufferLayoutDesc.renderTargetCount = 1;
         framebufferLayoutDesc.renderTargets = &targetLayout;
         ComPtr<IFramebufferLayout> framebufferLayout = device->createFramebufferLayout(framebufferLayoutDesc);
