@@ -415,11 +415,11 @@ struct RenderTargetTests : BaseTextureViewTest
             slangReflection
         ));
 
-        IFramebufferLayout::TargetLayout targetLayout;
+        TargetLayoutDesc targetLayout;
         targetLayout.format = textureInfo->format;
         targetLayout.sampleCount = sampleCount;
 
-        IFramebufferLayout::Desc framebufferLayoutDesc;
+        FramebufferLayoutDesc framebufferLayoutDesc;
         framebufferLayoutDesc.renderTargetCount = 1;
         framebufferLayoutDesc.renderTargets = &targetLayout;
         ComPtr<IFramebufferLayout> framebufferLayout = device->createFramebufferLayout(framebufferLayoutDesc);
